# ICP-project

./: Cargo.toml  README.md  build.sh  canister_ids.json  dfx.json  package-lock.json  package.json
src/hackproj_backend/: Cargo.toml  hackproj_backend.did
src/hackproj_backend/src/: lib.rs
src/hackproj_frontend/: package.json
src/hackproj_frontend/src/: App.jsx
src/hackproj_frontend/src/components/: BillManagement.jsx  CreateBill.jsx  Dashboard.jsx  LandingPage.jsx  LoginPage.css  LoginPage.jsx  navbar.css  navbar.jsx
